--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "16.8.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-dropzone-component": "^3.2.0",
+    "react-html-parser": "^2.0.2",
     "react-modal": "^3.8.1",
     "react-redux": "5.0.6",
     "react-router": "^4.2.0",
